--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     align-items: center;
     flex-direction: column;
     height: 100vh;
+    box-sizing: border-box; /* Asegura que el padding y border se incluyan en el ancho y alto */
 }
 
 h1 {
@@ -20,11 +21,17 @@ form {
     flex-direction: column;
     align-items: center;
     margin-bottom: 20px;
+    padding: 20px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 label {
     margin-bottom: 10px;
     font-size: 18px;
+    color: #555; /* Añade un color para el texto del label */
 }
 
 input[type="text"] {
@@ -32,6 +39,15 @@ input[type="text"] {
     font-size: 16px;
     margin-bottom: 10px;
     width: 300px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+    transition: border-color 0.3s; /* Suaviza la transición de color del borde */
+}
+
+input[type="text"]:focus {
+    border-color: #28a745; /* Cambia el color del borde al hacer focus */
+    outline: none; /* Elimina el outline por defecto */
 }
 
 button {
@@ -42,10 +58,12 @@ button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    transition: background-color 0.3s, transform 0.3s; /* Suaviza las transiciones */
 }
 
 button:hover {
     background-color: #218838;
+    transform: scale(1.05); /* Agrega un pequeño efecto de escala al hover */
 }
 
 #map {
@@ -55,19 +73,31 @@ button:hover {
     margin-top: 20px;
     border-radius: 10px;
     border: 1px solid #ccc;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Añade una sombra para darle profundidad al mapa */
 }
 
 #message {
     margin-top: 20px;
     font-size: 18px;
     color: #333;
+    text-align: center;
+    max-width: 600px; /* Limita el ancho del mensaje */
+    padding: 10px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra ligera para el mensaje */
 }
 
 #qrCode {
     margin-top: 20px;
     text-align: center;
+    padding: 20px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 300px;
 }
-
 
 #qrPanel {
     display: none;
@@ -83,4 +113,19 @@ button:hover {
     display: block;
 }
 
+/* Media Queries para dispositivos móviles */
+@media (max-width: 600px) {
+    body {
+        padding: 10px;
+    }
+
+    input[type="text"], button {
+        width: 100%; /* Asegura que los elementos del formulario ocupen el 100% del ancho en móviles */
+    }
+
+    #map, #message, #qrCode {
+        width: 100%;
+        max-width: none; /* Elimina el máximo ancho para móviles */
+    }
+}
 
