--- a/style.css
+++ b/style.css
@@ -112,6 +112,33 @@ button:hover {
 #qrPanel.show {
     display: block;
 }
+#loading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999; /* Para asegurar que la animación esté en la parte superior */
+}
+
+.spinner {
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid #28a745; /* Color de la parte superior */
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
+
 
 /* Media Queries para dispositivos móviles */
 @media (max-width: 600px) {
